--- a/list.html
+++ b/list.html
@@ -44,7 +44,7 @@
         });
 
         $.get("footer.html", function (data) {
-            $("body").appendTo(data);
+            $(data).appendTo('body');
         });
     </script>
 </head>
