//公共部分加载         $("#head").load("head.html");         $("#footer").load("footer.html");

--- a/list.html
+++ b/list.html
@@ -39,9 +39,12 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/assets/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
-        //公共部分加载
-        $("#head").load("head.html");
-        $("#footer").load("footer.html");
+        $(function () {
+            //公共部分加载
+            $("#head").load("head.html");
+            $("#footer").load("footer.html");
+        })
+        
     </script>
 </head>
 <body>
