--- a/list.html
+++ b/list.html
@@ -41,10 +41,16 @@
     <script type="text/javascript">
         $(function () {
             //公共部分加载
-            $("#head").load("head.html");
-            $("#footer").load("footer.html");
-        })
-        
+            //$("#head").load("head.html");
+            //$("#footer").load("footer.html");
+            $.get("head.html", function (data) {
+                $("#head").html(data);
+            });
+            $.get("footer.html", function (data) {
+                $("#footer").html(data);
+               
+            });
+        }) 
     </script>
 </head>
 <body>
