$("#head").load("head.html");

--- a/list.html
+++ b/list.html
@@ -39,9 +39,10 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/assets/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
+        $("#head").load("head.html");
         $(function () {
             //公共部分加载
-            $("#head").load("head.html");
+            //$("#head").load("head.html");
             //$("#footer").load("footer.html");
             //$.get("head.html", function (data) {
             //    $("#head").html(data);
