$("#footer").load("footer.html");

--- a/list.html
+++ b/list.html
@@ -462,7 +462,7 @@
         $(function () {
             //公共部分加载
             $("#head").load("head.html");
-            //$("#footer").load("footer.html");
+            $("#footer").load("footer.html");
             //$.get("head.html", function (data) {
             //    $("#head").html(data);
             //});
