$.get("head.html", function (data) {                 $("#head").html(data);                 //$("#footer").load("footer.html");             });             //$.get("footer.html", function (data) {             //    $("#footer").html(data);             //});

--- a/list.html
+++ b/list.html
@@ -463,14 +463,15 @@
             //公共部分加载
             //$("#head").load("head.html");
             //$("#footer").load("footer.html");
-            $.get("head.html", function (data) {
-                $("#head").html(data);
-                $("#footer").load("footer.html");
-            });
-            //$.get("footer.html", function (data) {
-            //    $("#footer").html(data);
-            //});
+            
         })
+        $.get("head.html", function (data) {
+            $("#head").html(data);
+            //$("#footer").load("footer.html");
+        });
+        $.get("footer.html", function (data) {
+            $("#footer").html(data);
+        });
     </script>
 
 </body>
