$("#head").load("head.html");

--- a/list.html
+++ b/list.html
@@ -459,19 +459,22 @@
     <script src="js/assets/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
         //$("#head").load("head.html");
+        $(document).ready(function () {
+            $("#head").load("head.html");
+        });
         $(function () {
             //公共部分加载
             //$("#head").load("head.html");
             //$("#footer").load("footer.html");
             
         })
-        $.get("head.html", function (data) {
-            $("#head").html(data);
-            //$("#footer").load("footer.html");
-        });
-        $.get("footer.html", function (data) {
-            $("#footer").html(data);
-        });
+        //$.get("head.html", function (data) {
+        //    $("#head").html(data);
+        //    //$("#footer").load("footer.html");
+        //});
+        //$.get("footer.html", function (data) {
+        //    $("#footer").html(data);
+        //});
     </script>
 
 </body>
