$("#footer").load("footer.html");

--- a/footer.html
+++ b/footer.html
@@ -52,10 +52,7 @@
         <div class="media">
 
             <div class="media-body">
-                &copy;
-                <script type="text/javascript">
-                        var d = new Date();
-                        document.write(d.getFullYear());</script> Qiyidea.com, All Rights Reserved. 奇异点 版权所有  &nbsp;&nbsp;  蜀ICP备xxxxxx号
+                &copy; 2014   Qiyidea.com, All Rights Reserved. 奇异点 版权所有  &nbsp;&nbsp;  蜀ICP备xxxxxx号
             </div>
         </div>
 
