$("#footer").load("footer.html");

--- a/list.html
+++ b/list.html
@@ -461,7 +461,7 @@
         //$("#head").load("head.html");
         $(document).ready(function () {
             $("#head").load("head.html");
-            //$("#footer").load("footer.html");
+            $("#footer").load("footer.html");
         });
         $(function () {
             //公共部分加载
