--- a/list.html
+++ b/list.html
@@ -35,10 +35,26 @@
 <body>
     <div id="head"></div>
     <div class="container">
-        <h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
-        <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>
+        <!--<h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
+        <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>-->
         <!--<hr class="half-rule">-->
-
+        
+        <div class="well well-sm">
+            <ul class="nav nav-pills" role="tablist">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Profile</a></li>
+                <li role="presentation"><a href="#">Messages</a></li>
+            </ul>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <ul class="nav nav-pills" role="tablist">
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="#">Profile</a></li>
+                    <li role="presentation"><a href="#">Messages</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="row featurette" style="margin:0; padding:20px 0 0 0;">
             <div class="pull-left" style="margin:0; padding:0;">
                 <h3 style="margin:0; padding:0;">企业项目 </h3>
