--- a/list.html
+++ b/list.html
@@ -38,7 +38,7 @@
         <!--<h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
         <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>-->
         <!--<hr class="half-rule">-->
-        
+        <div class="clearfix"><br /><br /></div>
         <div class="well well-sm">
             <ul class="nav nav-pills" role="tablist">
                 <li role="presentation" class="active"><a href="#">Home</a></li>
@@ -46,7 +46,7 @@
                 <li role="presentation"><a href="#">Messages</a></li>
             </ul>
         </div>
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-success">
             <div class="panel-body">
                 <ul class="nav nav-pills" role="tablist">
                     <li role="presentation" class="active"><a href="#">Home</a></li>
