--- a/index.html
+++ b/index.html
@@ -152,20 +152,20 @@
     </div><!-- /.carousel -->
     <!-- Begin page content -->
     <div class="container">
+        <div class=" clearfix mtmb15"></div>
         <h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
         <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>
         <!--<hr class="half-rule">-->
 
         <div class="row featurette" style="margin:0; padding:20px 0 0 0;">
-            <div class="pull-left" style="margin:0; padding:0;">
-                <h3 style="margin:0; padding:0;">企业项目 </h3>
+            <div class="pull-left mp0" >
+                <h3 class="mp0">企业项目 </h3>
             </div>
-            <span class="pull-right" style="margin:0; padding:0;">
+            <span class="pull-right mp0">
                 <a href="videoVerticalList_videoSelect.action">更多</a>
             </span>
-
         </div>
-        <hr class="clearfix" style="margin:5px 0 15px 0;">
+        <hr class="clearfix mt5mb15">
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
@@ -379,17 +379,17 @@
             </div>
 
         </div>
-        <div class="clearfix"><p><br></p></div>
-        <div class="row featurette" style="margin:0; padding:0;">
-            <div class="pull-left" style="margin:0; padding:0;">
-                <h3 style="margin:0; padding:0;">个人项目 </h3>
+        <div class="clearfix mt5mb15"></div>
+        <div class="row featurette mp0" >
+            <div class="pull-left mp0">
+                <h3 class="mp0">个人项目 </h3>
             </div>
-            <span class="pull-right" style="margin:0; padding:0;">
+            <span class="pull-right mp0">
                 <a href="videoVerticalList_videoSelect.action">更多</a>
             </span>
 
         </div>
-        <hr class="clearfix" style="margin:5px 0 15px 0;">
+        <hr class="clearfix mt5mb15">
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
@@ -498,17 +498,17 @@
 
         </div>
 
-        <div class="clearfix"><p><br></p></div>
-        <div class="row featurette" style="margin:0; padding:0;">
-            <div class="pull-left" style="margin:0; padding:0;">
-                <h3 style="margin:0; padding:0;">风云人物 </h3>
+        <div class="clearfix mt5mb15"></div>
+        <div class="row featurette mp0">
+            <div class="pull-left mp0">
+                <h3 class="mp0">风云人物 </h3>
             </div>
-            <span class="pull-right" style="margin:0; padding:0;">
+            <span class="pull-right mp0" >
                 <a href="videoVerticalList_videoSelect.action">更多</a>
             </span>
 
         </div>
-        <hr class="clearfix" style="margin:5px 0 15px 0;">
+        <hr class="clearfix mt5mb15" >
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
