<div class="clearfix mtmb15"></div>

--- a/list.html
+++ b/list.html
@@ -470,6 +470,8 @@
         </div>
 
     </div>
+    <div class="clearfix mtmb15"></div>
+
     <div id="footer"></div>
 
     <!-- Bootstrap core JavaScript
