--- a/list.html
+++ b/list.html
@@ -489,14 +489,8 @@
             $("#head").load("head.html");
             $("#footer").load("footer.html");
             $.scrollUp({
-                scrollName: 'scrollUp', // Element ID
-                topDistance: '300', // Distance from top before showing element (px)
-                topSpeed: 300, // Speed back to top (ms)
-                animation: 'fade', // Fade, slide, none
-                animationInSpeed: 200, // Animation in speed (ms)
-                animationOutSpeed: 200, // Animation out speed (ms)
-                scrollText: 'Scroll to top', // Text for element
-                activeOverlay: false, // Set CSS color to display scrollUp active point, e.g '#00FFFF'
+                animation: 'fade',
+                activeOverlay: '#00FFFF'
             });
         })
         //$.get("head.html", function (data) {
