,$.scrollUp({scrollName:"scrollUp",topDistance:"300",topSpeed:300,animation:"fade",animationInSpeed:200,animationOutSpeed:200,scrollText:'<i class="fa fa-angle-up"></i>',activeOverlay:!1})

--- a/list.html
+++ b/list.html
@@ -492,7 +492,17 @@
             //    animation: 'fade',
             //    activeOverlay: '#00FFFF'
             //});
-            $.scrollUp();
+            //$.scrollUp();
+            $.scrollUp({
+                scrollName: "scrollUp",
+                topDistance: "300",
+                topSpeed: 300,
+                animation: "fade",
+                animationInSpeed: 200,
+                animationOutSpeed: 200,
+                scrollText: '<i class="fa fa-angle-up"></i>',
+                activeOverlay: !1
+            })
         })
         //$.get("head.html", function (data) {
         //    $("#head").html(data);
