glyphicon glyphicon-chevron-up

--- a/list.html
+++ b/list.html
@@ -500,7 +500,7 @@
                 animation: "fade",
                 animationInSpeed: 200,
                 animationOutSpeed: 200,
-                scrollText: '<i class="fa fa-angle-up"></i>',
+                scrollText: '<i class="glyphicon glyphicon-chevron-up"></i>',
                 activeOverlay: !1
             })
         })
