管理页面的顶部顶

--- a/head.html
+++ b/head.html
@@ -32,7 +32,7 @@
                     <div class="input-group">
                         <input type="text" placeholder="发现更多金点子" class="form-control  input-sm">
                         <span class="input-group-btn">
-                            <button class="btn btn-success btn-sm" type="button">查询</button>
+                            <button class="btn btn-success btn-sm" type="button">搜 索</button>
                         </span>
                     </div>
                 </form>
