--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <h3 class="mp0">企业项目 </h3>
             </div>
             <span class="pull-right mp0">
-                <a href="videoVerticalList_videoSelect.action">更多</a>
+                <a href="list.html">更多</a>
             </span>
         </div>
         <hr class="clearfix mt5mb15">
@@ -385,7 +385,7 @@
                 <h3 class="mp0">个人项目 </h3>
             </div>
             <span class="pull-right mp0">
-                <a href="videoVerticalList_videoSelect.action">更多</a>
+                <a href="list.html">更多</a>
             </span>
 
         </div>
