--- a/head.html
+++ b/head.html
@@ -9,7 +9,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
+                <li class="active"><a href="index.html">首页</a></li>
                 <li><a href="#about">浏览项目</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
