--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">首页</a></li>
-                    <li><a href="#about">浏览项目</a></li>
+                    <li><a href="list.html">浏览项目</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
