css style="box-shadow: rgb(204, 204, 204) 0px 1px 5px 0px;"

--- a/admin/head.html
+++ b/admin/head.html
@@ -1,5 +1,5 @@
 ﻿  <!-- Static  navbar box-shadow: rgb(190, 190, 190) 0px 0px 3px 0px; -->
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="box-shadow: rgb(204, 204, 204) 0px 1px 5px 0px;">
+<nav class="navbar navbar-default navbar-static-top" role="navigation"  style="border-bottom-color: #D9D9DE;">
     <div class="container">
         <div class="navbar-header">
 
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#" style="padding:15px 20px 8px 20px;"><span class="badge ren-info-msg-bell-badge">5</span><span class="glyphicon glyphicon-bell" style="font-size:22px;"></span><div class="sr-only">消息</div></a></li>
                 <li id="fat-menu" class="dropdown">
-                    
+
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
                         <li><a href="#"><i class="glyphicon glyphicon-hd-video"></i> &nbsp; 我的云课堂 &nbsp;<span class="badge">4</span></a> </li>
@@ -37,7 +37,7 @@
                     </ul>
                 </li>
             </ul>
-             
+
             <div class="navbar-form navbar-right navbar-form-input">
                 <form class="navbar-left" role="form" action="index.html">
                     <div class="input-group">
