--- a/head.html
+++ b/head.html
@@ -1,8 +1,8 @@
 ﻿  <!-- Static  navbar -->
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="border-bottom-color: #D9D9DE;">
     <div class="container">
         <div class="navbar-header">
-           
+
             <a class="navbar-brand navbar-brand-logo" href="#">
                 <img alt="奇异点・qiyidea.com" src="img/qiyidea_logo.png">
             </a>
@@ -17,7 +17,7 @@
                         <li><a href="#">筹资金</a></li>
                         <li><a href="#">筹实物</a></li>
                         <li><a href="#">发现小伙伴</a></li>
-                        
+
                     </ul>
                 </li>
                 <li><a href="#contact">帮助中心</a></li>
