--- a/admin/home.html
+++ b/admin/home.html
@@ -22,6 +22,7 @@
     <!--<link href="../css/sticky-footer-navbar.css" rel="stylesheet">-->
     <link href="../css/main.css" rel="stylesheet">
     <link href="../js/chosen/chosen.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
     <link href="../css/rener.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../js/assets/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -301,7 +302,7 @@
     <div class="clearfix mtmb15"></div>
 
    
-    <div id="footer">
+    <!--<div id="footer">
         <ul class="ft">
             <li><span>Qiyidea &copy; 2014 </span></li>
             <li>
@@ -354,8 +355,8 @@
              
 
         </ul>
-    </div>
-
+    </div>-->
+    <div id="footer"></div>
 
     <!--dialog modal-->
 
@@ -417,6 +418,7 @@
 
         $(function () {
             $("#head").load("head.html");
+            $("#footer").load("footer.html");
             $('.ren-icon-edit').hide();
             $('.ren-newest-info').mouseover(function () {
                 $(this).find('.ren-icon-edit').show();
