--- a/admin/head.html
+++ b/admin/head.html
@@ -28,8 +28,8 @@
 
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
-                        <li><a href="#"><i class="glyphicon glyphicon-hd-video"></i> &nbsp; 我的云课堂 &nbsp;<span class="badge">4</span></a> </li>
-                        <li><a href="doc.html"><i class="glyphicon glyphicon-align-justify"></i> &nbsp;&nbsp;我的档案</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-hd-video"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
+                        <li><a href="doc.html"><i class="glyphicon glyphicon-align-justify"></i> &nbsp;&nbsp;我的群组</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-wrench"></i> &nbsp;&nbsp;个人设置</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-envelope"></i> &nbsp;&nbsp;意见反馈</a></li>
                         <li class="divider"></li>
