--- a/admin/user_signin.html
+++ b/admin/user_signin.html
@@ -57,78 +57,79 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-5 user-signin-1">
+                <div class="col-sm-12 col-md-5 user-signin-1 paddright0">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <form role="form" id="login-container" style="display:none;">
+                            <form role="form" id="login-container" style="display:block;" action="improve_info.html">
                                 <div class="row">
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <h4>登录QiYiDian</h4>
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="用户名或者邮件">
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="密码">
                                     </div>
 
-                                    <div class="form-group col-lg-11">
-                                        <div class="btn-group">
-                                            <button type="submit" class="btn btn-primary" style="width:140px">登录</button>
-                                        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <a id="forgot-pwd-link" href="javascript:;">忘记密码?</a>
-
+                                    <div class="form-group col-lg-12">
+                                        <div class=" col-sm-8 paddleft0">
+                                            <button type="submit" class="btn btn-primary btn-block">登录</button>
+                                        </div>
+                                        <div class=" col-sm-4 martop5">
+                                            <a id="forgot-pwd-link" href="javascript:;">忘记密码?</a>
+                                        </div>
                                     </div>
-
-
                                 </div>
                                 <div class="row">
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <hr class="clearfix" />
-                                        <button type="button" class="btn btn-success btn-lg btn-block" id="register">注册</button>
+                                        <button type="button" class="btn btn-success btn-block" id="register">注册</button>
 
                                     </div>
                                 </div>
                             </form>
                             <form role="form" id="register-form" style="display:none;">
                                 <div class="row">
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <span>学生注册</span>
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="邮箱地址">
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="密码">
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="确认密码">
                                     </div>
-                                    <div class="form-group col-lg-11">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-success" id="register" style="width:140px">立即注册</button>
+                                    <div class="form-group col-lg-12">
+                                        <div class=" col-sm-6 paddleft0">
+                                            <button type="button" class="btn btn-success btn-block" id="register">立即注册</button>
                                         </div>
-                                        <a id="once-login" href="javascript:;">已有账号，立即登录</a>
+                                        <div class=" col-sm-6 martop5">
+                                            <a id="once-login" href="javascript:;">已有账号，立即登录</a>
+                                        </div>
                                     </div>
 
                                 </div>
                             </form>
-                            <form role="form" id="forgot-pwd-form" style="display:block;">
+                            <form role="form" id="forgot-pwd-form" style="display:none;">
                                 <div class="row">
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <h4>忘记密码？</h4>
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <p class="forgot-password-short">输入你的电子邮件地址以接收新的密码</p>
                                     </div>
                                     <div class="form-group col-lg-10">
                                         <input type="text" class="form-control" id="email-link" placeholder="邮箱地址">
                                     </div>
                                      <button type="button" class="btn btn-primary" id="register">提交</button>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <p class="forgot-password-student"><b>遇到问题了？</b> 请换个Email地址试试，或者请查阅 <a href="https://support.edmodo.com/home#entries/22816885-forgot-your-password-teacher"> 帮助中心 </a> 。</p>
                                     </div>
-                                    <div class="form-group col-lg-11">
+                                    <div class="form-group col-lg-12">
                                         <a id="back-login" href="javascript:;">返回QiYiDian</a>
                                     </div>
                                 </div>
@@ -150,7 +151,7 @@
     <script src="../js/assets/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
         $(function () {
-            $("#footer").load("footer.html");
+            $("#footer").load("footerlg.html");
         });
         /*立即注册*/
         $("#register").click(function () {
