登录界面样式完善

--- a/admin/user_signin.html
+++ b/admin/user_signin.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-7">
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <h2>欢迎来到QiYiDian</h2>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-5 user-signin-1 paddright0">
+                <div class="col-sm-12 col-md-4 user-signin-1 paddright0">
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <form role="form" id="login-container" style="display:block;" action="improve_info.html">
@@ -76,8 +76,8 @@
                                         <div class=" col-sm-8 paddleft0">
                                             <button type="submit" class="btn btn-primary btn-block">登录</button>
                                         </div>
-                                        <div class=" col-sm-4 martop5">
-                                            <a id="forgot-pwd-link" href="javascript:;">忘记密码?</a>
+                                        <div class=" col-sm-4 martop5 text-right">
+                                            <a id="forgot-pwd-link" class="small" href="javascript:;">忘记密码?</a>
                                         </div>
                                     </div>
                                 </div>
@@ -92,7 +92,7 @@
                             <form role="form" id="register-form" style="display:none;">
                                 <div class="row">
                                     <div class="form-group col-lg-12">
-                                        <span>学生注册</span>
+                                        <span>用户注册</span>
                                     </div>
                                     <div class="form-group col-lg-12">
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="邮箱地址">
@@ -104,11 +104,11 @@
                                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="确认密码">
                                     </div>
                                     <div class="form-group col-lg-12">
-                                        <div class=" col-sm-6 paddleft0">
+                                        <div class=" col-sm-5 paddleft0">
                                             <button type="button" class="btn btn-success btn-block" id="register">立即注册</button>
                                         </div>
-                                        <div class=" col-sm-6 martop5">
-                                            <a id="once-login" href="javascript:;">已有账号，立即登录</a>
+                                        <div class=" col-sm-7 martop5 text-right">
+                                            <a id="once-login" class="small" href="javascript:;">已有账号，立即登录</a>
                                         </div>
                                     </div>
 
@@ -123,14 +123,14 @@
                                         <p class="forgot-password-short">输入你的电子邮件地址以接收新的密码</p>
                                     </div>
                                     <div class="form-group col-lg-10">
-                                        <input type="text" class="form-control" id="email-link" placeholder="邮箱地址">
+                                        <input type="email"  class="form-control input-sm" required id="email-link" placeholder="邮箱地址">
                                     </div>
-                                     <button type="button" class="btn btn-primary" id="register">提交</button>
+                                     <button type="button" class="btn btn-primary btn-sm" id="register">提交</button>
                                     <div class="form-group col-lg-12">
-                                        <p class="forgot-password-student"><b>遇到问题了？</b> 请换个Email地址试试，或者请查阅 <a href="https://support.edmodo.com/home#entries/22816885-forgot-your-password-teacher"> 帮助中心 </a> 。</p>
+                                        <p class="forgot-password-student"><b>遇到问题了？</b> 请换个Email地址试试，或者请查阅 <a href="https://support.qiyidea.com/home#entries/22816885-forgot-your-password-teacher"> 帮助中心 </a> 。</p>
                                     </div>
                                     <div class="form-group col-lg-12">
-                                        <a id="back-login" href="javascript:;">返回QiYiDian</a>
+                                        <a id="back-login" href="javascript:;">返回登录</a>
                                     </div>
                                 </div>
                             </form>
