--- a/admin/home.html
+++ b/admin/home.html
@@ -87,7 +87,7 @@
                         <a href="#" class="list-group-item">APP开发</a>
                         <a href="#" class="list-group-item">
                             <div class="row">
-                                <div class="col-sm-6 col-lg-6">更多</div>
+                                <div class="col-sm-6 col-lg-6">显示全部</div>
                                 <div class="col-sm-6 col-lg-6 text-right">
                                     <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
                                 </div>
@@ -113,7 +113,7 @@
 
                     <a href="#" class="list-group-item">
                         <div class="row">
-                            <div class="col-sm-8 col-lg-8">更多</div>
+                            <div class="col-sm-8 col-lg-8">显示全部</div>
                             <div class="col-sm-4 col-lg-4 text-right">
                                 <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
                             </div>
