--- a/admin/head.html
+++ b/admin/head.html
@@ -3,13 +3,13 @@
     <div class="container">
         <div class="navbar-header">
 
-            <a class="navbar-brand navbar-brand-logo" href="#">
+            <a class="navbar-brand navbar-brand-logo" href="../index.html">
                 <img alt="奇异点・qiyidea.com" src="../img/qiyidea_logo.png">
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
+                <li class="active"><a href="home.html">首页</a></li>
                 <li><a href="#about">浏览项目</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
