--- a/admin/head.html
+++ b/admin/head.html
@@ -28,10 +28,10 @@
 
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
-                        <li><a href="#"><i class="glyphicon glyphicon-hd-video"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
-                        <li><a href="doc.html"><i class="glyphicon glyphicon-align-justify"></i> &nbsp;&nbsp;我的校园</a></li>
-                        <li><a href="settings.html"><i class="glyphicon glyphicon-wrench"></i> &nbsp;&nbsp;个人中心</a></li>
-                        <li><a href="settings.html"><i class="glyphicon glyphicon-envelope"></i> &nbsp;&nbsp;系统设置</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
+                        <li><a href="doc.html"><i class="glyphicon glyphicon-book"></i> &nbsp;&nbsp;我的校园</a></li>
+                        <li><a href="user-page.html"><i class="glyphicon glyphicon-user"></i> &nbsp;&nbsp;个人中心</a></li>
+                        <li><a href="settings.html"><i class="glyphicon glyphicon-cog"></i> &nbsp;&nbsp;系统设置</a></li>
                         <li class="divider"></li>
                         <li><a href="signin.html"><i class="glyphicon glyphicon-off"></i> &nbsp;&nbsp;退出</a></li>
                     </ul>
