--- a/admin/home.html
+++ b/admin/home.html
@@ -430,6 +430,12 @@
         $(function () {
             $("#head").load("head.html");
             $("#footer").load("footer.html");
+            //消息中心提示
+            //$('#ren-btn-notifications').delegate("click", function () {
+            //    alert('d');
+            //   // $('#ren-notifications').popover('show');
+            //})
+            //消息中心提示部分代码结束
             //最信消息区域鼠标移动显示图标
             $('.ren-icon-edit').hide();
             $('.ren-newest-info').mouseover(function () {
